--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Erick Borel</title>
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&display=swap" rel="stylesheet">
-
+        <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&family=Press+Start+2P&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/index.css">
     </head>
@@ -23,5 +22,9 @@
                 <a id="button"href="" leng="en">Download CV</a>
             </nav>
         </header>
+        <div id="Titulo">
+            <h1>Erick Borel</h1>
+            <p>FrontEnd Developer</p>
+        </div>
     </body>
 </html>
