--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
             <nav>
                 <a href="" lang="en">Skills</a>
-                <a href="">Projetos</a>
+                <a href="">Meus Projetos</a>
                 <a href="">Sobre</a>
                 <a href="">Contatos</a>
                 <a id="button"href="" leng="en">Download CV</a>
