--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/index.css">
         <link rel="stylesheet" href="css/components/title.css">
+        <link rel="stylesheet" href="css/components/subtitle.css">
     </head>
 
     <body>
@@ -25,7 +26,7 @@
         </header>
         <div id="Titulo">
             <h1>Erick Borel</h1>
-            <p>FrontEnd Developer</p>
+            <h2>FrontEnd Developer</h2>
         </div>
     </body>
 </html>
