--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="css/index.css">
         <link rel="stylesheet" href="css/components/title.css">
         <link rel="stylesheet" href="css/components/subtitle.css">
+        <link rel="stylesheet" href="css/components/box.css">
     </head>
 
     <body>
@@ -24,7 +25,7 @@
                 <a id="button"href="" leng="en">Download CV</a>
             </nav>
         </header>
-        <div id="Titulo">
+        <div id="box">
             <h1>Erick Borel</h1>
             <h2>FrontEnd Developer</h2>
         </div>
