--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="css/components/title.css">
         <link rel="stylesheet" href="css/components/subtitle.css">
         <link rel="stylesheet" href="css/components/box.css">
+        <link rel="stylesheet" href="css/components/button.css">
     </head>
 
     <body>
@@ -22,12 +23,15 @@
                 <a href="">Projetos</a>
                 <a href="">Sobre</a>
                 <a href="">Contatos</a>
-                <a id="button"href="" leng="en">Download CV</a>
+                <a class="button"href="" leng="en">Download CV</a>
             </nav>
         </header>
         <div id="box">
             <h1>Erick Borel</h1>
             <h2>FrontEnd Developer</h2>
         </div>
+
+        <a class="button"href="" leng="en">Download CV</a>
+        <a class="button"href="">Contatos</a>
     </body>
 </html>
