--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&family=Press+Start+2P&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/reset.css">
-        <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="css/components/header.css">
+        <link rel="stylesheet" href="css/components/action.css">
         <link rel="stylesheet" href="css/components/title.css">
         <link rel="stylesheet" href="css/components/subtitle.css">
         <link rel="stylesheet" href="css/components/box.css">
@@ -15,20 +16,20 @@
     </head>
 
     <body>
-        <header>
+        <header class="header">
             <img src="assets/img/logo.png" alt="Avatar do Erick Borel">
 
             <nav>
-                <a href="" lang="en">Skills</a>
-                <a href="">Projetos</a>
-                <a href="">Sobre</a>
-                <a href="">Contatos</a>
+                <a class="action" href="" lang="en">Skills</a>
+                <a class="action" href="">Projetos</a>
+                <a class="action" href="">Sobre</a>
+                <a class="action" href="">Contatos</a>
                 <a class="button"href="" leng="en">Download CV</a>
             </nav>
         </header>
-        <div id="box">
-            <h1>Erick Borel</h1>
-            <h2>FrontEnd Developer</h2>
+        <div class="box">
+            <h1 class="title">Erick Borel</h1>
+            <h2 class="subtitle">FrontEnd Developer</h2>
         </div>
 
         <a class="button"href="" leng="en">Download CV</a>
