--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
         <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&family=Press+Start+2P&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/components/header.css">
+        <link rel="stylesheet" href="css/components/banner.css">
         <link rel="stylesheet" href="css/components/action.css">
         <link rel="stylesheet" href="css/components/title.css">
         <link rel="stylesheet" href="css/components/subtitle.css">
         <link rel="stylesheet" href="css/components/box.css">
-        <link rel="stylesheet" href="css/components/button.css">
+        <link rel="stylesheet" href="css/components/button.css">     
     </head>
 
     <body>
@@ -27,12 +28,15 @@
                 <a class="button"href="" leng="en">Download CV</a>
             </nav>
         </header>
-        <div class="box">
-            <h1 class="title">Erick Borel</h1>
-            <h2 class="subtitle">FrontEnd Developer</h2>
-        </div>
 
-        <a class="button"href="" leng="en">Download CV</a>
-        <a class="button"href="">Contatos</a>
+        <section class="banner">
+            <div class="box">
+                <h1 class="title">Erick Borel</h1>
+                <h2 class="subtitle">FrontEnd Developer</h2>
+            </div>
+
+            <a class="button"href="" leng="en">Download CV</a>
+            <a class="button"href="">Contatos</a>
+        </section>
     </body>
 </html>
