--- a/index.html
+++ b/index.html
@@ -30,13 +30,17 @@
         </header>
 
         <section class="banner">
-            <div class="box">
-                <h1 class="title">Erick Borel</h1>
-                <h2 class="subtitle">FrontEnd Developer</h2>
-            </div>
+            <div class="wrapper">
+                <div class="box">
+                    <h1 class="title">Erick Borel</h1>
+                    <h2 class="subtitle">FrontEnd Developer</h2>
+                </div>
 
-            <a class="button"href="" leng="en">Download CV</a>
-            <a class="button"href="">Contatos</a>
+                    <div class="navigation">    
+                    <a class="button"href="" leng="en">Download CV</a>
+                    <a class="button"href="">Contatos</a>
+                </div>
+            </div>
         </section>
     </body>
 </html>
