--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <body>
         <header class="header">
-            <img src="assets/img/logo.png" alt="Avatar do Erick Borel">
+            <img src="assets/img/logo.png" alt="Avatar do Erick Borel" style="border-radius: 15px">
 
             <nav>
                 <a class="action" href="" lang="en">Skills</a>
