--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/components/header.css">
         <link rel="stylesheet" href="css/components/banner.css">
+        <link rel="stylesheet" href="css/components/section.css">
         <link rel="stylesheet" href="css/components/action.css">
         <link rel="stylesheet" href="css/components/title.css">
         <link rel="stylesheet" href="css/components/subtitle.css">
@@ -41,6 +42,10 @@
                     <a class="button"href="">Contatos</a>
                 </div>
             </div>
+        </section>
+
+        <section class="section">
+            <h1 class="title -second">Skills</h1>
         </section>
     </body>
 </html>
