--- a/index.html
+++ b/index.html
@@ -46,6 +46,16 @@
 
         <section class="section">
             <h1 class="title -second">Skills</h1>
+
+            <dl>
+                <dt>HTML</dt>
+                <dd>
+                    <img src="img/ico_html5.png" alt="">
+                </dd>
+                <dd>
+                    <progress max="100" value="70">70%</progress>
+                </dd>
+            </dl>
         </section>
     </body>
 </html>
