--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <dl>
                 <dt>HTML</dt>
                 <dd>
-                    <img src="img/ico_html5.png" alt="">
+                    <img src="img/ico_html5.png" alt="Logo HTML5">
                 </dd>
                 <dd>
                     <progress max="100" value="70">70%</progress>
