--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
         <link rel="stylesheet" href="css/components/banner.css">
         <link rel="stylesheet" href="css/components/section.css">
         <link rel="stylesheet" href="css/components/action.css">
-        <link rel="stylesheet" href="css/components/title.css">
+        <link rel="stylesheet" href="css/components/main-title.css">
         <link rel="stylesheet" href="css/components/subtitle.css">
         <link rel="stylesheet" href="css/components/box.css">
-        <link rel="stylesheet" href="css/components/button.css">     
+        <link rel="stylesheet" href="css/components/button.css">
+        <link rel="stylesheet" href="css/components/skill-tec.css">
+        <link rel="stylesheet" href="css/components/progress-bar.css">    
     </head>
 
     <body>
@@ -33,7 +35,7 @@
         <section class="banner">
             <div class="wrapper">
                 <div class="box">
-                    <h1 class="title">Erick Borel</h1>
+                    <h1 class="main-title">Erick Borel</h1>
                     <h2 class="subtitle">FrontEnd Developer</h2>
                 </div>
 
@@ -45,17 +47,17 @@
         </section>
 
         <section class="section">
-            <h1 class="title -second">Skills</h1>
+            <h1 class="main-title -second">Skills</h1>
 
-            <dl>
-                <dt>HTML</dt>
-                <dd>
-                    <img src="img/ico_html5.png" alt="Logo HTML5">
-                </dd>
-                <dd>
-                    <progress max="100" value="70">70%</progress>
-                </dd>
-            </dl>
+            <article class="skill-tec">
+                <img class="icon" src="img/ico_html5.png" alt="Logo HTML5">
+                <div class="rigth">
+                    <h3 class="title">HTML</h3>
+                    <progress class="progress-bar" max="100" value="70">
+                        70%
+                    </progress>
+                </div>
+            </article>
         </section>
     </body>
 </html>
