create the skill-tec component

--- a/index.html
+++ b/index.html
@@ -124,5 +124,11 @@
                 </article>
             </div>
         </section>
+
+        <section class="section -second">
+            <figure class="card-project">
+                <img class="logo" src="" alt="Logo da Calculadora">
+            </figure>
+        </section>
     </body>
 </html>
