create the card-project component

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <link rel="stylesheet" href="css/components/button.css">
         <link rel="stylesheet" href="css/components/wrapper-skill.css">
         <link rel="stylesheet" href="css/components/skill-tec.css">
-        <link rel="stylesheet" href="css/components/progress-bar.css">    
+        <link rel="stylesheet" href="css/components/progress-bar.css">
+        <link rel="stylesheet" href="css/components/card-project.css">    
     </head>
 
     <body>
@@ -127,7 +128,13 @@
 
         <section class="section -second">
             <figure class="card-project">
-                <img class="logo" src="" alt="Logo da Calculadora">
+                <img class="logo" src="img/calculadora.png" alt="Logo da Calculadora">
+            </figure>
+            <figure class="card-project -red">
+                <img class="logo" src="img/conversor de moedas.png" alt="Logo Conversor de moedas">
+            </figure>
+            <figure class="card-project">
+                <img class="logo" src="img/portilofio.png" alt="Logo do Portifolio">
             </figure>
         </section>
     </body>
