--- a/index.html
+++ b/index.html
@@ -126,7 +126,9 @@
             </div>
         </section>
 
-        <section class="section -second">
+        <section class="section -second -bgBlack -bdRed">
+            <h2 class="main-title -second">Projetos</h2>
+
             <figure class="card-project">
                 <img class="logo" src="img/calculadora.png" alt="Logo da Calculadora">
             </figure>
