add teh links to card-project

--- a/index.html
+++ b/index.html
@@ -133,15 +133,21 @@
             <h2 class="main-title -second">Projetos</h2>
             
             <div class="wrapper-card">
-                <figure class="card-project">
-                    <img class="logo" src="img/calculadora.png" alt="Logo da Calculadora">
-                </figure>
-                <figure class="card-project -red">
-                    <img class="logo" src="img/conversor de moedas.png" alt="Logo do Conversor de moedas">
-                </figure>
-                <figure class="card-project">
-                    <img class="logo" src="img/portilofio.png" alt="Logo do Portifolio">
-                </figure>
+                <a href="https://github.com/ErickBorel/prototipo-calculadora" target="_blank">
+                    <figure class="card-project">
+                        <img class="logo" src="img/calculadora.png" alt="Logo da Calculadora">
+                    </figure>
+                </a>
+                <a href="https://github.com/ErickBorel/conversor-de-moeda" target="_blank">
+                    <figure class="card-project -red">
+                        <img class="logo" src="img/conversor de moedas.png" alt="Logo do Conversor de moedas">
+                    </figure>
+                </a>
+                <a href="https://erickborel.github.io/">
+                    <figure class="card-project">
+                        <img class="logo" src="img/portilofio.png" alt="Logo do Portifolio">
+                    </figure>
+                </a>
             </div>
         </section>
     </body>
