--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="css/components/header.css">
         <link rel="stylesheet" href="css/components/banner.css">
         <link rel="stylesheet" href="css/components/section.css">
-        <link rel="stylesheet" href="css/components/action.css">
+        <link rel="stylesheet" href="css/components/main-action.css">
         <link rel="stylesheet" href="css/components/main-title.css">
         <link rel="stylesheet" href="css/components/subtitle.css">
         <link rel="stylesheet" href="css/components/box.css">
@@ -29,10 +29,10 @@
             <img src="assets/img/logo.png" alt="Avatar do Erick Borel" style="border-radius: 15px">
 
             <nav>
-                <a class="action" href="" lang="en">Skills</a>
-                <a class="action" href="">Projetos</a>
-                <a class="action" href="">Sobre</a>
-                <a class="action" href="">Contatos</a>
+                <a class="main-action" href="" lang="en">Skills</a>
+                <a class="main-action" href="">Projetos</a>
+                <a class="main-action" href="">Sobre</a>
+                <a class="main-action" href="">Contatos</a>
                 <a class="button"href="" leng="en">Download CV</a>
             </nav>
         </header>
