Change section to main-section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/components/main-header.css">
         <link rel="stylesheet" href="css/components/main-banner.css">
-        <link rel="stylesheet" href="css/components/section.css">
+        <link rel="stylesheet" href="css/components/main-section.css">
         <link rel="stylesheet" href="css/components/main-action.css">
         <link rel="stylesheet" href="css/components/main-title.css">
         <link rel="stylesheet" href="css/components/subtitle.css">
@@ -51,7 +51,7 @@
             </div>
         </section>
 
-        <section class="section">
+        <section class="main-section">
             <h1 class="main-title -second">Skills</h1>
             <div class="wrapper-skill">
                 <article class="skill-tec">
@@ -129,7 +129,7 @@
             </div>
         </section>
       
-        <section class="section -second -bgBlack -bdRed">
+        <section class="main-section -second -bgBlack -bdRed">
             <h2 class="main-title -second">Projetos</h2>
             
             <div class="wrapper-card">
