Create the button-arrow component

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <link rel="stylesheet" href="css/components/progress-bar.css">
         <link rel="stylesheet" href="css/components/wrapper-card.css">
         <link rel="stylesheet" href="css/components/card-project.css">
+        <link rel="stylesheet" href="css/components/main-description.css">
+        <link rel="stylesheet" href="css/components/button-arrow.css">
     </head>
 
     <body>
@@ -58,8 +60,8 @@
                 <img class="icon" src="img/ico_html5.png" alt="Logo do HTML5 em pixel arte">
                 <div class="rigth">
                     <h3 class="title">HTML</h3>
-                    <progress class="progress-bar" max="100" value="70">
-                        70
+                    <progress class="progress-bar" max="100" value="20">
+                        20%
                     </progress>
                 </div>
                 </article>
@@ -67,8 +69,8 @@
                 <img class="icon" src="img/ico_nodejs.png" alt="Logo do NodeJS em pixel arte">
                 <div class="rigth">
                     <h3 class="title">NodeJS</h3>
-                    <progress class="progress-bar" max="100" value="70">
-                        70%
+                    <progress class="progress-bar" max="100" value="0">
+                        0%
                     </progress>
                 </div>
                 </article>
@@ -76,8 +78,8 @@
                 <img class="icon" src="img/ico_css3.png" alt="Logo do CSS3 em pixel arte">
                 <div class="rigth">
                     <h3 class="title">CSS</h3>
-                    <progress class="progress-bar" max="100" value="70">
-                        70%
+                    <progress class="progress-bar" max="100" value="20">
+                        20%
                     </progress>
                 </div>
                 </article>
@@ -85,8 +87,8 @@
                 <img class="icon" src="img/ico_tdd.png" alt="Logo do TDD em pixel arte">
                 <div class="rigth">
                     <h3 class="title">TDD</h3>
-                    <progress class="progress-bar" max="100" value="70">
-                        70%
+                    <progress class="progress-bar" max="100" value="0">
+                        0%
                     </progress>
                 </div>
                 </article>
@@ -94,8 +96,8 @@
                 <img class="icon" src="img/ico_js.png" alt="Logo do JavaScript em pixel arte">
                 <div class="rigth">
                     <h3 class="title">JavaScript</h3>
-                    <progress class="progress-bar" max="100" value="70">
-                        70%
+                    <progress class="progress-bar" max="100" value="20">
+                        20%
                     </progress>
                 </div>
                 </article>
@@ -103,8 +105,8 @@
                 <img class="icon" src="img/ico_restapi.png" alt="Logo do Rest API em pixel arte">
                 <div class="rigth">
                     <h3 class="title">Rest API</h3>
-                    <progress class="progress-bar" max="100" value="70">
-                        70%
+                    <progress class="progress-bar" max="100" value="0">
+                        0%
                     </progress>
                 </div>
                 </article>
@@ -112,8 +114,8 @@
                 <img class="icon" src="img/ico_react.png" alt="Logo do React em pixel arte">
                 <div class="rigth">
                     <h3 class="title">React</h3>
-                    <progress class="progress-bar" max="100" value="70">
-                        70%
+                    <progress class="progress-bar" max="100" value="0">
+                        0%
                     </progress>
                 </div>
                 </article>
@@ -121,8 +123,8 @@
                 <img class="icon" src="img/ico_ux.png" alt="Logo do UX em pixel arte">
                 <div class="rigth">
                     <h3 class="title">UX</h3>
-                    <progress class="progress-bar" max="100" value="70">
-                        70%
+                    <progress class="progress-bar" max="100" value="0">
+                        0%
                     </progress>
                 </div>
                 </article>
@@ -150,5 +152,15 @@
                 </a>
             </div>
         </section>
+        <section class="main-section -bdBlack -bgGrey">
+            <h2 class="main-title -second -about">Sobre</h2>
+
+            <p class="main-description">
+                Operador de ponte rolante e estudante de programação sempre buscando novos horizontes, Gosta de ir descobrindo seu caminho conforme o percorre!
+            </p>
+
+            <button class="button-arrow -left"><span class="content">Voltar</span></button>
+            <button class="button-arrow -right"><span class="content">Avançar</span></button>
+        </section>    
     </body>
 </html>
