create the section Contact

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <link rel="stylesheet" href="css/components/button-arrow.css">
         <link rel="stylesheet" href="css/components/node-card.css">
         <link rel="stylesheet" href="css/components/main-carousel.css">
+        <link rel="stylesheet" href="css/components/main-footer.css">
     </head>
 
     <body>
@@ -211,6 +212,22 @@
             <p class="main-description">
                 Operador de ponte rolante e estudante de programação sempre buscando novos horizontes, Gosta de ir descobrindo seu caminho conforme o percorre!
             </p>
+        </section>
+        <section class="main-section -contact">
+            <h2 class="main-title -second -contact">contatos</h2>
+
+        </section>
+        <section class="main-footer">
+            <div class="icon">
+                <a href="https://twitter.com/erick_borel">
+                    <img src="img/Twitter-icon.png" alt="logo Twitter">
+                </a>
+            </div>
+            <div class="icon">
+                <a href="https://discord.com/channels/836041603810066455/836041603810066457">
+                    <img src="img/discord-icon.png" alt="logo discord">
+                </a>
+            </div>
         </section>
         <script src="js/components/main-carousel.js"></script>   
     </body>
