fix bug icon-twitter

--- a/index.html
+++ b/index.html
@@ -217,10 +217,10 @@
             <h2 class="main-title -second -contact">contatos</h2>
 
         </section>
-        <section class="main-footer">
+        <footer class="main-footer">
             <div class="icon">
                 <a href="https://twitter.com/erick_borel">
-                    <img src="img/Twitter-icon.png" alt="logo Twitter">
+                    <img src="img/twitter-icon.png" alt="logo Twitter">
                 </a>
             </div>
             <div class="icon">
@@ -228,7 +228,7 @@
                     <img src="img/discord-icon.png" alt="logo discord">
                 </a>
             </div>
-        </section>
+        </footer>
         <script src="js/components/main-carousel.js"></script>   
     </body>
 </html>
