fixed bug to section contato

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             </p>
         </section>
 
-        <section id="contact" class="main-section -contact">
+        <section id="contact" class="main-section -contato">
             <h1 class="main-title -second">Contatos</h1>
             <div class="icon">
                 <a href="http://api.whatsapp.com/send?phone=5541997998496" target="_blank">
