--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <h2 class="main-title -second">Projetos</h2>
             
             <div class="wrapper-card">
-                <a href="https://github.com/ErickBorel/prototipo-calculadora" target="_blank">
+                <a href="https://erickborel.github.io/calculadora" target="_blank">
                     <figure class="card-project">
                         <img class="logo" src="img/calculadora.png" alt="Logo da Calculadora">
                     </figure>
