add subtitle in card-project

--- a/index.html
+++ b/index.html
@@ -145,16 +145,19 @@
                     <figure class="card-project">
                         <img class="logo" src="img/calculadora.png" alt="Logo da Calculadora">
                     </figure>
+                    <h2 class="main-subtitle -label -calc">calculadora</h2>
                 </a>
-                <a href="https://github.com/ErickBorel/conversor-de-moeda" target="_blank">
+                <a href="https://erickborel.github.io/conversor-de-moeda/" target="_blank">
                     <figure class="card-project -red">
                         <img class="logo" src="img/conversor de moedas.png" alt="Logo do Conversor de moedas">
                     </figure>
+                    <h2 class="main-subtitle -label -conv">conversor de moeda</h2>
                 </a>
                 <a href="https://erickborel.github.io/">
                     <figure class="card-project">
                         <img class="logo" src="img/portilofio.png" alt="Logo do Portifolio">
                     </figure>
+                    <h2 class="main-subtitle -label -port">portifolio</h2>
                 </a>
             </div>
         </section>
