--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 
     <body>
         <header class="main-header">
-            <img src="assets/img/logo.png" alt="Avatar do Erick Borel" style="border-radius: 15px">
+            <!--<img src="assets/img/logo.png" alt="Avatar do Erick Borel" style="border-radius: 15px"> -->
+            <h1 class="main-title -logo">EB</h1>
 
             <nav>
                 <a class="main-action" href="#skills" leng="en">Skills</a>
