--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <a class="main-action" href="#Project">Projetos</a>
                 <a class="main-action" href="#about">Sobre</a>
                 <a class="main-action" href="#contact">Contatos</a>
-                <a class="main-button" href="CV/CV Erick.pdf" download="CV Erick.pdf" type="application/pdf" leng="en">Download CV</a>
+                <a class="main-button" href="CV/CV Erick.pdf" download="" type="application/pdf" leng="en">Download CV</a>
             </nav>
         </header>
 
